Bug 15162 - eh_frame table too big, may kernel panic
Summary: eh_frame table too big, may kernel panic
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: translator (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-19 16:59 UTC by Josh Stone
Modified: 2013-02-19 17:02 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Josh Stone 2013-02-19 16:59:58 UTC
Reported here: http://sourceware.org/ml/systemtap/2013-q1/msg00144.html

We have a limit of MAX_UNWIND_TABLE_SIZE for each of the eh/dwarf unwind tables, and binaries which exceed this are skipped.  However, it appears that the skipping is not quite complete, and can sometimes lead to a kernel panic.
Comment 1 Josh Stone 2013-02-19 17:02:20 UTC
The reporter confirmed that this commit solves the panic:
4472fb4 PR15162: Don't output anything at all for skipped unwind tables