PR15162: Don't output anything at all for skipped unwind tables

* translate.cxx (dump_unwindsym_cxt_table): New common function to
  output an unwind table.  It checks against MAX_UNWIND_TABLE_SIZE and
  nulls out those that are skipped, so they're truly skipped everywhere.
  (dump_unwindsym_cxt): Use dump_unwindsym_cxt_table for all four unwind
  tables: debug_frame, debug_frame_hdr, eh_frame, and eh_frame_hdr.